--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logoipsum</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Mulish&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <div class="container header__flex">
             <div>
                 <a href="#">
-                <img src="/Img/Logo Color.svg" alt="logo"> 
+                <img src="./Img/Logo Color.svg" alt="logo"> 
                 </a>
             </div>
             <nav class="nav">
