--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div> 
         </div>
         <div>
-            <img src="/Img/Hero 3D.png" alt="firstman">
+            <img src="./Img/Hero 3D.png" alt="firstman">
         </div>    
         
     </section>
@@ -58,7 +58,7 @@
         <div class="last__container footer__flex">
             <div>
                 <a href="#">
-                    <img src="/Img/Logo Color.svg" alt="logo">
+                    <img src="./Img/Logo Color.svg" alt="logo">
                 </a>
             </div>
             <nav class="nav">
