--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logoipsum</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +15,7 @@
         <div class="container header__flex">
             <div>
                 <a href="#">
-                <img src="./Img/Logo Color.svg" alt="logo"> 
+                <img src="/Img/Logo Color.svg" alt="logo"> 
                 </a>
             </div>
             <nav class="nav">
@@ -48,11 +47,54 @@
         </div>    
         
     </section>
-    <section class="form">
-        <H3></H3>
+    <section class="container subscribe">
+        <div class="secondman">
+            <img src="./Img/Hero2 3D.png" alt="secondman">
+        </div>
+        <div>
+            <H3 class="subscribe__title">Subscription index</H3>
+            <div>
+            <form >
+                <input class="input" type="email" placeholder="Email">
+            </form>
+            <button class="btn btn__fill__violet">Try</button>
+            </div>
+        </div>
     </section>
-    <section class="pricing">
-        <H2></H2>
+    <section class="container plan">
+        <H2 class="plan__title">Get the right plan for future</H2>
+        <div class="plan__flex">
+            <div class="item">
+                <p class="item__text">Starter</p>
+                <p class="item__title">Free</p>
+                <ul class="list">
+                    <li class="item__li">1 Website</li>
+                    <li class="item__li">5 GB Hosting</li>
+                    <li class="item__li">Limited Support</li>
+                </ul>
+                <button class="btn btn__item">Get Started</button>
+            </div>
+            <div class="item">
+                <p class="item__text">Premium</p>
+                <p class="item__title">$29<span>/month</span></p>
+                <ul class="list">
+                    <li class="item__li">10 Website</li>
+                    <li class="item__li">15 GB Hosting</li>
+                    <li class="item__li">Premium Support</li>
+                </ul>
+                <button class="btn btn__item">Get Started</button>
+            </div>
+            <div class="item">
+                <p class="item__text">Enterprise</p>
+                <p class="item__title">$49<span>/month</span></p>
+                <ul class="list">
+                    <li class="item__li">Unlimited Website</li>
+                    <li class="item__li">50 GB Hosting</li>
+                    <li class="item__li">Premium Support</li>
+                </ul>
+                <button class="btn btn__item">Get Started</button>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
