--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container header__flex">
             <div>
                 <a href="#">
-                <img src="/Img/Logo Color.svg" alt="logo"> 
+                <img src="./Img/Logo Color.svg" alt="logo"> 
                 </a>
             </div>
             <nav class="nav">
